# focal-01

./: README.md
zip/__MACOSX/: ._image-similarity-search
zip/__MACOSX/image-similarity-search/: ._Dockerfile
zip/__MACOSX/image-similarity-search/image_search/services/: ._image_search_service.py
zip/image-similarity-search/: README.md  pyproject.toml
zip/image-similarity-search/e2e/: test_e2e.py
zip/image-similarity-search/image_search/: app.py  db.py  settings.py
zip/image-similarity-search/image_search/api/: __init__.py  download.py  similar.py  upload.py
zip/image-similarity-search/image_search/dao/: image_dao.py
zip/image-similarity-search/image_search/services/: errors.py  file_storage_service.py  image_search_service.py  image_service.py  uuid_generator.py
zip/image-similarity-search/notebooks/: vgg16-tensorflow.ipynb
zip/image-similarity-search/scripts/: run-dev-mode.sh  run-e2e-tests.sh  run-in-docker.sh  run-unit-tests.sh
zip/image-similarity-search/tests/: conftest.py
zip/image-similarity-search/tests/services/: test_file_storage_service.py  test_image_search_service.py  test_image_service.py
