[tool.poetry]
name = "image-search"
version = "0.1.0"
description = ""
authors = ["Krystian Kichewko <krystiankichewko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic-settings = "^2.6.1"
ipython = "^8.29.0"
tensorflow = "^2.18.0"
pillow = "^11.0.0"
sqlmodel = "^0.0.22"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.0"
pytest = "^8.3.3"
pytest-watcher = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
